# podreader

./: .gitignore  CMakeLists.txt  README.md  podreader.sln
podreader/: podreader.vcxproj  podreader.vcxproj.filters
podreader/data/: test2.json
podreader/src/json/: json.hxx  jsonreader.hxx  jsontypes.hxx  operator.hxx  string.hxx  value.hxx
podreader/src/meta/: meta.hxx  pod.hxx
podreader/test/: test1.cxx  test2.cxx  test3.cxx
podreader/test/data/: test2.json
